<resources xmlns:tools="http://schemas.android.com/tools" tools:local="de">
    <string name="app_name">IdeaBase</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Benachrichtigungen</string>
    <string name="top_ranked">Top Ranked</string>
    <string name="ideas_bottom_nav">Ideen</string>
    <string name="profile_bot_nav">Profil</string>
    <string name="title_login">Einloggen</string>
    <string name="username_login">Benutzername</string>
    <string name="password_login">Password</string>
    <string name="login_bnt_login">Einloggen</string>
    <string name="register_btn_login">Registrieren</string>
    <string name="lastname">Nachname</string>
    <string name="firstname">Vorname</string>
    <string name="email">E-mail</string>
    <string name="repeat_password">Wiederhole Password</string>
    <string name="register">Registrieren</string>
    <string name="cancel" tools:ignore="ButtonCase">ABBRECHEN</string>
    <string name="registration_cancelled">Registrierung abgebrochen</string>
    <string name="network_issue_check_network">Es scheint Probleme mit dem Netzwerk zu geben, überprüfe deine Internetverbindung</string>
    <string name="long_lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="comment_text_button_under_idea">KOMMENTIEREN</string>
    <string name="rate_this_idea_content_description">Bewerte diese Idee</string>
    <string name="email_already_inuse_input_error">Diese E-Mail gehört bereits einem registrierten Benutzer</string>
    <string name="search_menu_title">Suche</string>
    <string name="title_search_dialog">Gib den Suchtext ein</string>
    <string name="btn_cancel_dialog" tools:ignore="ButtonCase">Abbrechen</string>
    <string name="btn_filter_dialog">Filter hinzufügen</string>
    <string name="btn_search_dialog">Suche</string>
    <string name="btn_back_dialog">Ändere den Suchtext</string>
    <string name="title_filter_dialog">Filtere die Suche nach Kategorien</string>
    <string name="search_for_hint_dialog">Suche nach…</string>
    <string name="contennt_description_fab_add_idea">Füge Idee hinzu</string>
    <string name="cancel_comment_contenct_description">Kommentieren abbrechen</string>
    <string name="submit_btn_comment">SENDEN</string>
    <string name="write_comment_hint">Schreibe Kommentar…</string>
    <string name="add_comment_cancelled">Schreiben eines Kommentars abgebrochen ohne zu speichern</string>
    <string name="prof_info_will_be_visible_commenting">Wenn du einen Kommentar hinzufügst, wird dein Profil für die anderen Benutzer sichtbar</string>
    <string name="comment_empty_error_message">Bitte füge etwas Text hinzu…</string>
    <string name="thank_you_comment">Danke fürs Kommentieren!</string>
    <string name="menu_detail_delete_idea">Idee löschen</string>
    <string name="menu_detail_edit_idea">Idee bearbeiten</string>
    <string name="menu_detail_release_idea">Idee freigeben</string>
    <string name="comments_title_detail_idea">Kommentare</string>
    <string name="save">SPEICHERN</string>
    <string name="save_idea_new">EINREICHEN</string>
    <string name="save_idea_edit">SPEICHERN</string>
    <string name="upload_image_idea_new">BILD HINZUFÜGEN</string>
    <string name="change_image_idea_edit">BILD ÄNDERN</string>
    <string name="idea_name_hint">Name</string>
    <string name="idea_name_helper">Name</string>
    <string name="description_hint_new_idea">Beschreibung</string>
    <string name="helper_categroy">Kategorie</string>
    <string name="hint_choose_category_new">Kategorie wählen</string>
    <string name="idea_updated_successflly">Idee wurde geupdated</string>
    <string name="not_authorized">Du bist nicht berechtigt</string>
    <string name="idea_released_mot_editable_error">Die Idee wurde von einem Ideenmanager freigegeben und kann nicht mehr bearbeitet oder gelöscht werden</string>
    <string name="idea_not_found_message">Die Idee wurde nicht gefunden, sie wurde vielleicht gelöscht…</string>
    <string name="parameter_missing_message">Fehlende Parameter</string>
    <string name="idea_added">Idee hinzugefügt</string>
    <string name="error_empty_name">Bitte gib einen Namen für deine Idee ein</string>
    <string name="error_empty_description">Bitte gib eine Beschreibung für deine Idee ein</string>
    <string name="error_empty_category">Bitte wähle eine Kategorie für deine Idee</string>
    <string name="error_empty_image">Bitte lade ein Bild für deine Idee hoch</string>
    <string name="idea_add_dialog_title">Deine Idee wurde hinzugefügt</string>
    <string name="idea_add_dialog_message">Ein Ideenmanager wird deine Idee prüfen. Nachdem sie freigegeben wurde, kann sie nicht mehr bearbeitet oder gelöscht werden</string>
    <string name="filter_no_categories_selected">Filter: Keine Kategorie ausgewählt</string>
    <string name="search_for">Suche nach…</string>
    <string name="comment_saved_as_draft">Der eingegebene Kommentar wurde gespeichert aber nicht veröffentlicht</string>
    <string name="error_empty_username">Benutzername darf nicht leer sein</string>
    <string name="error_not_email_adress">Dein Benutzername sollte eine E-Mailadresse sein</string>
    <string name="error_empty_password">Bitte gib dein Passwort ein</string>
    <string name="error_pwd_user_not_valid">Bitte gib eine gültige E-Mail/Passwort-Kombination ein</string>
    <string name="category_title">Kategorie:</string>
    <string name="btn_release">FREIGEBEN</string>
    <string name="idea_released_message">Idee wurde freigegeben</string>
    <string name="release_cancelled_message">Freigabe abgebrochen</string>
    <string name="idea_deleted_message">Idee wurde gelöscht</string>
    <string name="delete_cancelled_message">Löschen abgebrochen</string>
    <string name="dialog_message_release">Wurde eine Idee freigegeben, kann sie vom Ersteller nicht mehr gelöscht oder bearbeitet werden! Die Freigabe kann nicht Rückgängig gemacht werden</string>
    <string name="dialog_title_release">Idee freigeben ?</string>
    <string name="dialog_title_delete">Idee löschen ?</string>
    <string name="dialog_message_delete">Dies kann nicht rückgängig gemacht werden!</string>
    <string name="btn_delete">LÖSCHEN</string>
    <string name="rating_1">Gefällt mir gar nicht</string>
    <string name="rating_2">Nicht sehr cool</string>
    <string name="rating_3">Ganz OK</string>
    <string name="rating_4">Cool</string>
    <string name="rating_5">Mega Cool</string>
    <string name="dialog_title_rate">Wie gefällt dir die Idee?</string>
    <string name="btn_rate">BEWERTEN</string>
    <string name="worng_login_credentials_message">Diese Benutzernamen/Passwort-Kombination ist nicht gültig!</string>
    <string name="actionbar_title_register">Registrieren</string>
    <string name="first_name_profile">Vorname:</string>
    <string name="last_name_profile">Nachname:</string>
    <string name="role_profile">Rolle:</string>
    <string name="try_again_btn_no_internet">VERSUCHE ES ERNEUT</string>
    <string name="add_comment_detail"> KOMMENTIEREN</string>
    <string name="be_the_first_to_comment">Sei der erste:</string>
    <string name="understood_button">VERSTANDEN</string>
    <string name="remove_draft_dialog">VERWERFEN</string>
    <string name="dialog_comment_draft_message">Es wird verfügbar sein, sobald du das nächste mal kommentierst!</string>
    <string name="dialog_save_draft_title">Entwurf speichern?</string>
    <string name="dialog_edit_profile_message">Du kannst dein Bild ändern, ohne andere Änderungen vorzunehmen. Gehe einfach auf  \'zurück\', nachdem du es geändert hast. Wenn du andere Änderungen vornehmen willst, musst du dich erneut anmelden!</string>
    <string name="dialog_edit_profile_title">Profil bearbeiten</string>
    <string name="search_didalog_will_be_filtered">”Ergebnisse werden gefiltert nach: /u0020” </string>
    <string name="search_diealog_addfilter_text"> Klicke unten auf FILTER HINZUFÜGEN, um das Ergebnis nach Kategorien zu filtern </string>
    <string name="add_serach_text_filter_dialog">SUCHTEXT HINZUFÜGEN</string>
    <string name="change_search_text_filter_dialog">SUCHTEXT ÄNDERN</string>
    <string name="change_filter_search_dialog">FILTER ÄNDERN</string>
    <string name="save_idea_draft_title">Idee als Entwurf speichern?</string>
    <string name="save_idea_draft_message">Sie wird verfügbar sein, nachdem du das nächste mal eine neue Idee hinzufügst!</string>
    <string name="save_idea_draft_cancel">VERWERFEN</string>
    <string name="save_idea_draft_save">SPEICHERN</string>
    <string name="change_prodile_picture_overlay">Ändern</string>
    <string name="enter_first_name_error">Bitte gib deinen Vornamen ein</string>
    <string name="error_enter_last_name">Bitte gib deinen Nachnamen ein</string>
    <string name="pwd_min_error">Bitte gib ein Passwort mit mindestens 8 Zeichen, 1 Nummer, 1 Buchstaben und 1 Sonderzeichen ein</string>
    <string name="pwd_same_error">Bitte wiederhole dein Passwort</string>
    <string name="pwd_are_ot_same_error">Passwörter sind nicht ident</string>
    <string name="please_login_again">Deine Zugangsdaten wurden aktualisiert. Bitte melde dich erneut an </string>
    <string name="oops_check_internet_connection"> Upps, es scheint Verbindungsprobleme zu geben. Bitte überprüfe deine Internetverbindung …</string>
    <string name="search_no_matching_results"> Deine Suche hat keine passenden Ergebnisse gefunden </string>
    <string name="cd_search_result_not_found"> Suchergebnis nicht gefunden </string>
    <string name="cd_no_internet">Keine Top Bewerteten Ideen bis jetzt</string>
    <string name="message_no_rank_yet"> Es können noch keine  Top Bewerteten Ideen angezeigt werden. Nur Ideen, die von mehreren Nutzern bewertet wurden, erhalten ein Ranking</string>
    <string name="no_ideas_yet"> Bisher wurden keine Ideen gepostet. Hast du eine gute Idee?</string>
    <string name="cd_no_ideas_yet">Keine Ideen bis jetzt</string>
    <string name="test">Test</string>
    <string name="released_status">Freigegeben</string>
    <string name="updated_status">Geupdatet</string>
    <string name="new_status">Neu</string>
    <string name="oops_offline_try_again_loading"> Upps, es scheint Verbindungsprobleme zu geben. Bitte überprüfe deine Internetverbindung und versuche es erneut…</string>
    <string name="checking_credentials_again_loading"> Anmeldedaten erneut prüfen…</string>
    <string name="chacking_credentials_loading">Benutzerdaten überprüfen…</string>
    <string name="cd_raika_logo">Raika Logo</string>
    <string name="cd_no_internet_image">Kein Internet Bild</string>
    <string name="set_profile_pic">Setzte dein Profilbild</string>
    <string name="porfile_message"> Andere Nutzer werden deine Ideen und Kommentare leichter erkennen, wenn du ein Profilbild hochlädst! Du kannst dies auch später im Menü des Profilbildschirms machen </string>
    <string name="btn_prof_set_not">JETZT PROFILBILD SETZEN</string>
    <string name="btn_later">SPÄTER</string>
    <string name="edit_idea_title">Idee bearbeiten</string>
    <string name="adding_cancelled_without_draft"> Hinzufügen einer Idee ohne zu Speichern abgebrochen </string>
    <string name="idea_saved"> Die eingegebene Idee wurde gespeichert, aber nicht veröffentlicht </string>
</resources>