<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/navigation_top_ranked"
        android:name="com.codingschool.ideabase.ui.list.ListFragment"
        android:label="@string/top_ranked"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_ideas"
        android:name="com.codingschool.ideabase.ui.list.ListFragment"
        android:label="@string/ideas_bottom_nav"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.codingschool.ideabase.ui.profile.ProfileFragment"
        android:label="@string/profile_bot_nav"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.codingschool.ideabase.ui.login.LoginFragment"
        android:label="@string/title_login" >
        <action
            android:id="@+id/toRegister"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.codingschool.ideabase.ui.register.RegisterFragment"
        android:label="RegisterFragment" />
</navigation>