<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name = "vm"
            type = "com.codingschool.ideabase.ui.editprofile.EditProfileViewModel"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintVertical_chainStyle="packed"
        tools:context=".ui.editprofile.EditProfileFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="@dimen/profile_picture_edit_profile"
            android:layout_height="160dp"
            android:layout_margin="@dimen/margin_large"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.onGetProfileImageClick()}"
            app:layout_constraintBottom_toTopOf="@+id/tilFirstname"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:shapeAppearanceOverlay="@style/circleImageView"
            app:srcCompat="@drawable/ic_baseline_person_add_alt_1_24"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp"

            />

        <TextView
            android:id="@+id/tvChangePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_profile_picture_transp_60"
            android:text="@string/change_prodile_picture_overlay"
            android:visibility="invisible"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xlarge28"
            app:layout_constraintBottom_toBottomOf="@id/ivProfilePicture"
            app:layout_constraintTop_toTopOf="@id/ivProfilePicture"
            app:layout_constraintStart_toStartOf="@id/ivProfilePicture"
            app:layout_constraintEnd_toEndOf="@id/ivProfilePicture"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"

            android:hint="@string/firstname"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfilePicture"
            app:layout_constraintBottom_toTopOf="@+id/tilLastname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onTextChanged="@{vm::onFirstnameTextChanged}"
                android:text="@={vm.firstname}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:hint="@string/lastname"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilFirstname"
            app:layout_constraintBottom_toTopOf="@+id/tilPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onTextChanged="@{vm::onLastnameTextChanged}"
                android:text="@={vm.lastname}"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:hint="@string/password_login"
            android:focusable="true"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilLastname"
            app:layout_constraintBottom_toTopOf="@+id/tilPasswordagain">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:onTextChanged="@{vm::onPasswordTextChanged}"
                android:text="@={vm.password}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordagain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:hint="@string/repeat_password"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:layout_constraintBottom_toTopOf="@+id/guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordagain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:onTextChanged="@{vm::onPassword2TextChanged}"
                android:text="@={vm.password2}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/margin_standard"
            android:backgroundTint="@color/yellow"
            android:onClick="@{() -> vm.onSaveClick()}"
            android:text="@string/save"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>